--- a/appGrider/appGrider.vbproj
+++ b/appGrider/appGrider.vbproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigManager.vb" />
+    <Compile Include="ControlMoveBinder.vb" />
     <Compile Include="DbManager.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
@@ -98,7 +99,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="KeyBinder.vb" />
+    <Compile Include="ControlBinder.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
